8/4/2011 Release of version 0.10.20

Made the doms ingester optional, so it will not be bundled in the release

Fixed the errors in the log4j config files

Removed the version numbers from the war files, and removed the symlink stuff

Moved schemas to live in services/

Moved schemaStore.xml to live in services/tomcat-apps

Removed the services/tomcatapps folder. The warfiles are now in services/webapps

Brought the changelog up2date

1/4/2011 Release of version 0.10.19

Changed the build system to maven, instead of ant

Renamed the doms webservices (rather, a natural consequence of maven)

Updated log4j config files to use rolling file appenders

Added the ingester as an dependency, and some example preingest files

Updated the system to create basic objects, to use the fedora batch process

Added the SchemaStore pseudo process

Updated the authchecker service to 0.0.10
  - changed the interface
  - Made the tickets carry more info


28/1/2011 Release of version 0.10.18

Changed logging levels back to DEBUG

Upgraded all services, so that they include the proper surveillance libs

Fixed the xacml path problem in fedora.fcfg

26/1/2011 Release of version 0.10.17 - Second official Release

26/1/2011 updated the logging configurations, so that we log on INFO in
individuals files, and WARN in the doms.log file.

26/1/2011 Updated base objects so that
 1. removed the big pbcore placeholder from template_program, as it was clogging up the summa
 2. made all RELS-EXT datastreams versionable
 3. Split the RadioTV_License into adminOnlyLicense, and inhouseLicense
 4. Updated all the objects to not use POLICY datastreams, if they were only
 referring to the default open License. This speeds up ingests x2.
 5. Fixed the wrong formatURI/mimetype in the POLICY datastreams

24/1/2011 Updated fedora to version 3.4.2. Should not have any incompabilities aas we were using a maintenance snapshot before
