@@ -36,7 +36,7 @@ TOMCAT_DIR=$TESTBED_DIR/tomcat
 
 LOG_DIR=$TOMCAT_DIR/logs
 
-SERVICES_DIR=$TESTBED_DIR/services/
+SERVICES_DIR=$TESTBED_DIR/services
 
 
 FEDORA_DIR=$SERVICES_DIR/fedora
